💚 fix root font size, fix form element alignments

--- a/src/assets/global.styl
+++ b/src/assets/global.styl
@@ -35,15 +35,13 @@ transition = {
 }
 
 // general
-html, body
-	margin: 0
-	padding: 0
-body
+:root
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 	font-weight: 300
 	font-size: 16px
-	*
-		transition: color transition.duration transition.function, background transition.duration transition.function, background-color transition.duration transition.function
+html, body
+	margin: 0
+	padding: 0
 a, a:visited
 	text-decoration: none
 	transition: color transition.duration transition.function
@@ -52,6 +50,10 @@ a, a:visited
 			color: c.accent2
 			&:hover
 				color: c.accent1
+h2
+	font-size: 1.625rem
+label
+	font-size: 1rem
 hr
 	border: none
 	height: 1px
@@ -118,9 +120,9 @@ for m, c in mode
 .text-right
 	text-align: right
 .text-base
-	font-size: 1em
+	font-size: 1rem
 .text-small
-	font-size: .85em
+	font-size: .875rem
 .text-tiny
 	font-size: .75em
 .text-thin
@@ -261,6 +263,8 @@ button
 	transition: all transition.duration transition.function
 	cursor: pointer
 	color: mode.dark.highlight
+	&:focus
+		z-index: 50
 	&.button-inline
 		padding: .5rem
 	for m, c in mode
@@ -280,7 +284,11 @@ select
 	color: inherit
 	padding: .5rem 1.5rem .5rem .5rem
 	outline: none
+	box-sizing: content-box
+	height: 1.125rem
 	transition: all transition.duration transition.function
+	&:focus
+		z-index: 50
 	for m, c in mode
 		.{m} &
 			color: c.front
@@ -301,6 +309,8 @@ textarea
 	border-radius: 2px
 	padding: .5rem
 	transition: all transition.duration transition.function
+	&:focus
+		z-index: 50
 	for m, c in mode
 		.{m} &
 			background: c.back
